[package]
name = "secret"
version = "0.2.0"
authors = ["Nicolas Koch <nioko1337@gmail.com>"]
description = "Libsecret bindings for Rust"
documentation = "https://nicokoch.github.io/secret-rs/secret/"
repository = "https://github.com/nicokoch/secret-rs"
readme = "README.md"
license = "MIT"

[dependencies]
libc = "*"
glib = "0.5.0"
glib-sys = "0.6.0"
gobject-sys = "0.6.0"

[dependencies.secret-sys]
path = "secret-sys"
version = "0.2.0"
